plugins {
    id 'java'
    id('io.qameta.allure') version '2.11.2'
}

group 'com.broit'
version '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.1'

    testImplementation 'com.codeborne:selenide:7.0.3'

    testImplementation 'org.slf4j:slf4j-simple:2.0.9'
    testImplementation 'io.qameta.allure:allure-selenide:2.24.0'
}

test {
    useJUnitPlatform()
}

allure {
    useJUnit5 {
        version = '2.24.0'
    }
}
